# algebraic-moduli-sampler

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  pytest.ini  setup.py
.github/workflows/: ci.yml
docs/: api.md  design.md  index.md  references.md  theory.md  usage.md
examples/small_params/: elliptic_small.json  hyperelliptic_g2_small.json  p1_degree_linebundles.json
scripts/: quick_status.py
src/moduli_sampler/: __init__.py  cli.py
src/moduli_sampler/geometry/: __init__.py  cohomology.py  curves.py  invariants.py  line_bundles.py
src/moduli_sampler/io/: __init__.py  json_io.py  metadata.py
src/moduli_sampler/sampling/: __init__.py  params_schema.py  sampler.py
src/moduli_sampler/utils/: __init__.py  logging.py  seed.py  validation.py
tests/: __init__.py  conftest.py  test_cli.py  test_cohomology_rr.py  test_geometry_basic.py  test_invariants.py  test_io.py  test_sampling.py  test_schema.py  test_utils.py
